Bugfix and remove time.h dependence (for windows compliance).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/fastknn@9 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,3 +2,6 @@ useDynLib(SearchTrees)
 exportPattern(createIndex,
               findKNN,
               getPointsInRect)
+exportClass(SearchTree,
+            QuadTree
+            )
