--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SearchTrees
 Type: Package
 Title: Spatial Search Trees
-Version: 0.1
+Version: 0.2
 Date: 2011-06-27
 Author: Gabriel Becker	
 Maintainer: Gabriel Becker <gmbecker@ucdavis.edu>
-Description: This package provides an implementation of the QuadTree data structure. It uses this to implement fast k-Nearest Neighbor and Rectangular range lookups.
+Description: This package provides an implementation of the QuadTree data structure. It uses this to implement fast k-Nearest Neighbor and Rectangular range lookups in 2 dimenions. The primary target is high performance interactive graphics.
 Depends: methods
 License: LGPL
 LazyLoad: yes
