Refactored code appears to work for pts. Need some R side code for KNN lookup.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/fastknn@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,7 +1,11 @@
 useDynLib(SearchTrees)
 exportPattern(createIndex,
               findKNN,
-              getPointsInRect)
+              getPointsInRect,
+              createTree,
+              rectLookup)
 exportClass(SearchTree,
-            QuadTree
+            QuadTree,
+            QuadTree2,
+            SearchTree2
             )
