everything except populating maxBucket slot works. passes check
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/fastknn@14 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,11 +1,7 @@
 useDynLib(SearchTrees)
-exportPattern(createIndex,
-              findKNN,
-              getPointsInRect,
+exportPattern(knnLookup,
               createTree,
               rectLookup)
 exportClass(SearchTree,
-            QuadTree,
-            QuadTree2,
-            SearchTree2
+            QuadTree          
             )
